# nvoip-python

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: check_otp.py  create_access_token.py  create_call.py  get_balance.py  list_whatsapp_templates.py  send_otp.py  send_sms.py  send_whatsapp_template.py
nvoip/: __init__.py  client.py
