[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nvoip"
version = "0.1.0"
description = "Cliente Python simples para a API v2 da Nvoip."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Nvoip" }]
keywords = ["nvoip", "voip", "sms", "whatsapp", "otp", "api"]

[tool.setuptools.packages.find]
where = ["."]
